WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
14810
[gtk] [patch] Bad n_params on load_finished's g_signal_new in webkitgtkpage.cpp
https://bugs.webkit.org/show_bug.cgi?id=14810
Summary
[gtk] [patch] Bad n_params on load_finished's g_signal_new in webkitgtkpage.cpp
Diego Escalante Urrelo
Reported
2007-07-29 18:53:50 PDT
In webkitgtkpage.cpp: --- gtk/Api/webkitgtkpage.cpp (revision 24766) +++ gtk/Api/webkitgtkpage.cpp (working copy) @@ -215,8 +215,8 @@ static void webkit_gtk_page_class_init(W NULL, NULL, webkit_gtk_marshal_VOID__OBJECT_BOOLEAN, - G_TYPE_NONE, 1, - WEBKIT_GTK_TYPE_FRAME); + G_TYPE_NONE, 2, + WEBKIT_GTK_TYPE_FRAME, G_TYPE_BOOLEAN);
Attachments
The patch with a corresponding changelog entry
(1.04 KB, patch)
2007-07-29 19:39 PDT
,
Diego Escalante Urrelo
alp
: review+
Details
Formatted Diff
Diff
Fixes class_offset argument of various signals
(5.44 KB, patch)
2007-07-29 20:48 PDT
,
Diego Escalante Urrelo
alp
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Diego Escalante Urrelo
Comment 1
2007-07-29 19:39:31 PDT
Created
attachment 15736
[details]
The patch with a corresponding changelog entry :)
Alp Toker
Comment 2
2007-07-29 20:09:17 PDT
Comment on
attachment 15736
[details]
The patch with a corresponding changelog entry Thanks! Note that I've fixed up the ChangeLog entry a little to match formatting conventions and made the log a bit more descriptive before landing this patch.
Diego Escalante Urrelo
Comment 3
2007-07-29 20:48:45 PDT
Created
attachment 15737
[details]
Fixes class_offset argument of various signals An updated version.
Alp Toker
Comment 4
2007-07-29 21:08:42 PDT
Comment on
attachment 15737
[details]
Fixes class_offset argument of various signals This one fixes the remaining issues (except for one of the signals, the fix for which I've added to the patch). It also modifies the formatting of the previous ChangeLog entry by mistake, a change which I've removed.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug