2007-07-29  Diego Escalante Urrelo  <diegoe@gnome.org>

Reviewed by Alp Toker.

        http://bugs.webkit.org/show_bug.cgi?id=14810
        Bad n_params on load_finished's g_signal_new in webkitgtkpage.cpp

        * gtk/Api/webkitgtkpage.cpp: Use a correct n_params value and the corresponding types for
        them in the "load_finished" signal.


Canonical link: https://commits.webkit.org/19361@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@24768 268f45cc-cd09-0410-ab3c-d52691b4dbfc